# Amr-runtime-reliability

./: .gitignore  README.md  main.py  requirements.txt
docs/: AMR_RELIABILITY_PROJECT_NARRATIVE.md  AMR_RELIABILITY_PROJECT_NARRATIVE_CN.md  (+18 more)
ros2_ws/src/amr_reliability_benchmark/: package.xml  setup.cfg  setup.py
ros2_ws/src/amr_reliability_benchmark/amr_reliability_benchmark/: __init__.py  depth_policy_observation_recorder.py  episode_recorder.py  fault_proxy_publisher.py  gazebo_fault_injector.py  metrics_replay.py  nav2_telemetry_adapter.py  navigation_policy_monitor.py  policy_episode_recorder.py  recovery_executor.py  reliability_logic.py  runtime_router.py  scan_policy_observation_recorder.py  scenario_catalog.py  scenario_goal_publisher.py  scenario_runner.py
ros2_ws/src/amr_reliability_benchmark/config/: nav2_params.yaml  navigation_policy_model.json  scenarios.yaml
ros2_ws/src/amr_reliability_benchmark/launch/: amr_nav2_bringup.launch.py  gazebo_nav2_benchmark.launch.py  nav2_runtime_pipeline.launch.py  reliability_pipeline.launch.py  reliability_room.launch.py  robot_state.launch.py  scenario_runner.launch.py  spawn_reliability_amr.launch.py
ros2_ws/src/amr_reliability_benchmark/maps/: reliability_room.pgm  reliability_room.yaml
ros2_ws/src/amr_reliability_benchmark/models/reliability_amr/: model.config  model.sdf
ros2_ws/src/amr_reliability_benchmark/scripts/: check_ros_stack.sh  install_jazzy_nav2_gazebo.sh
ros2_ws/src/amr_reliability_benchmark/urdf/: reliability_amr.urdf
ros2_ws/src/amr_reliability_benchmark/worlds/: reliability_room.sdf
(+70 files in other folders)
